fixed scrollbar in mobile view

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -74,12 +74,10 @@
 .container{
 height:30%;
 }
-.project-container{
-overflow-y:scroll;
-overflow-x:hidden;
-}
 .project-limit{
 flex-direction:column;
+overflow-y:scroll;
+overflow-x:hidden;
 }
 .project-pic{
 height:235px;
